--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "Decoding the Magic of Compilers"
 description: "A comprehensive exploration of compiler optimization techniques"
 baseurl: "/decoding-magic-of-compiler"
-url: ""
+url: "https://mohitmishra786.github.io"
 
 # Build settings
 markdown: kramdown
