--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -15,40 +15,34 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+      
+      - name: Run build scripts
+        run: |
+          chmod +x ./scripts/build_jekyll.sh
+          ./scripts/build_jekyll.sh
+      
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
       
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.2'
+          ruby-version: '3.1'
           bundler-cache: true
       
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v3
-      
-      - name: Run prepare script
-        run: |
-          chmod +x ./scripts/prepare_jekyll.sh
-          ./scripts/prepare_jekyll.sh
-      
-      - name: Install dependencies
-        run: |
-          gem install bundler
-          bundle install
-      
       - name: Build with Jekyll
-        run: bundle exec jekyll build
-        env:
-          JEKYLL_ENV: production
+        uses: actions/jekyll-build-pages@v1
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
+  # Deployment job
   deploy:
     environment:
       name: github-pages
