--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -34,10 +34,20 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.1'
-          bundler-cache: true
+          # Don't use bundler-cache when Gemfile has changed
+          # bundler-cache: true 
+      
+      - name: Install dependencies
+        run: |
+          gem install bundler -v 2.3.26
+          bundle config set --local deployment 'false'
+          bundle install
       
       - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
+        run: |
+          bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        env:
+          JEKYLL_ENV: production
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
