--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -28,6 +28,7 @@ jobs:
           ./scripts/build_jekyll.sh
       
       - name: Setup Pages
+        id: pages
         uses: actions/configure-pages@v4
       
       - name: Setup Ruby
@@ -45,7 +46,7 @@ jobs:
       
       - name: Build with Jekyll
         run: |
-          bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+          bundle exec jekyll build --baseurl "/decoding-magic-of-compiler"
         env:
           JEKYLL_ENV: production
       
